--- a/Lib/Dashboard/style.css
+++ b/Lib/Dashboard/style.css
@@ -7,12 +7,12 @@
   align-items: center;
   z-index: 100;
   left: 0;
-  top: 0;
+  top: 50px;
   width: 50px;
   height: 50px;
   background: #5656565e;
   border: 0;
-  border-radius: 0 0 10px 0;
+  border-radius: 0 10px 10px 0;
   transition: 0.2s;
   cursor: pointer;
 }
