--- a/Lib/BackgroundGenerator/style.css
+++ b/Lib/BackgroundGenerator/style.css
@@ -93,8 +93,14 @@ html, body {
   box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.25);
 }
 
-#save {
-  color: #03a9f4;
+.container button:active {
+  background: #444;
+  color: #fff;
+}
+
+.container button:disabled:active {
+  background: #fff;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .hidden {
