--- a/Lib/Keyboard/style.css
+++ b/Lib/Keyboard/style.css
@@ -187,3 +187,22 @@ textarea {
 .alt {
     width: 101px;
 }
+
+@media (max-width: 1500px) {
+    .keyboard{
+        transform: scale(0.8);
+        top: 20px
+    }
+}
+
+@media (max-width: 1200px) {
+    .keyboard{
+        transform: scale(0.6);
+    }
+}
+
+@media (max-width: 900px) {
+    .keyboard{
+        transform: scale(0.4);
+    }
+}
