--- a/style.css
+++ b/style.css
@@ -92,6 +92,17 @@ h2 {
   background: #333333;
 }
 
+.card {
+  transform: translateY(50px);
+  opacity: 0;
+}
+
+.card.show {
+  opacity: 1;
+  transition: all 1s;
+  transform: translateY(0px);
+}
+
 @media only screen and (max-width: 1430px) and (min-width: 1090px) {
   .cards {
     grid-template-columns: repeat(3, 1fr);
