--- a/Lib/Games/style.css
+++ b/Lib/Games/style.css
@@ -1,5 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
+.back {
+  display: grid;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  background: #5656565e;
+  border: 0;
+  border-radius: 0 0 10px 0;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.back svg {
+  fill: #ffffff;
+}
+
+.back:hover{
+  transform: scale(1.2);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -29,10 +54,10 @@
 body {
   background: #f5f5f5;
   overflow-x: hidden;
-  width: calc(100% + 15px);
+  /* width: calc(100% + 15px); */
 }
 
-h1, h2 {
+h2 {
   position: relative;
   text-align: center;
   width: 100%;
