--- a/style.css
+++ b/style.css
@@ -18,18 +18,23 @@
 
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
-  background: #333333;
+  background: #4e4e4e;
 }
 
 ::-webkit-scrollbar-thumb:active {
   border-radius: 2px;
-  background: #585858;
+  background: #727272;
 }
 
 body {
+  user-select: none;
   background: #f5f5f5;
   overflow-x: hidden;
   width: calc(100% + 15px);
+}
+
+h1, h2, p {
+  cursor: default;
 }
 
 h1, h2 {
@@ -101,7 +106,7 @@ h1, h2 {
   margin-top: 50px;
   width: 80%;
   height: 2px;
-  background: #333333;
+  background: #363636;
 }
 
 .card {
@@ -114,6 +119,96 @@ h1, h2 {
   transition: all 1s;
   transform: translateY(0px);
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 30px;
+  gap: 20px;
+  width: 100%;
+  height: 100px;
+  background: #363636;
+  color: #fff;
+}
+
+footer .contact {
+  margin-top: 5px;
+  display: flex;
+  gap: 20px;
+}
+
+/* footer a i::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: 3px;
+  border-radius: 5px;
+  z-index: 1;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  opacity: 1;
+} */
+
+/* .fa-brands::before {
+  position: relative;
+  display: block;
+  z-index: 2;
+} */
+
+footer .back {
+  position: relative;
+}
+
+footer .back::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: white;
+  top: 5px;
+  left: 3px;
+  border-radius: 5px;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+footer a i {
+  position: relative;
+  z-index: 2;
+  text-decoration: none;
+  font-size: 40px;
+  color: #fff;
+  transition: 0.5s;
+}
+
+footer a:hover .back::before {
+  opacity: 1;
+}
+
+footer a:hover i, footer a:hover .back::before {
+  transform: scale(1.4);
+}
+
+footer a:hover .fa-vk {
+  color: #0077FF;
+}
+
+footer a:hover .fa-square-github {
+  color: #6e5494;
+}
+
+footer a:hover .fa-square-instagram {
+  background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 
 @media only screen and (max-width: 1430px) and (min-width: 1090px) {
   .cards {
