--- a/Lib/Snake/style.css
+++ b/Lib/Snake/style.css
@@ -55,7 +55,7 @@ body {
   display: flex;
   text-align: center;
   width: 60vmin;
-  height: 35vmin;
+  height: 30vmin;
   background: #293447;
   border-radius: 5px;
   flex-direction: column;
@@ -71,6 +71,7 @@ h2 {
 }
 
 .newGame {
+  cursor: pointer;
   font-size: 1.2rem;
   font-weight: 500;
   background: #212837;
@@ -80,6 +81,13 @@ h2 {
   height: 50px;
   border: 1px solid #B8C6DC;
   outline: none;
+  transition: 0.5s;
+}
+
+.newGame:hover {
+  transform: scale(1.2);
+  color: #212837;
+  background: #B8C6DC;
 }
 
 .visible {
