--- a/Lib/MemoryGame/style.css
+++ b/Lib/MemoryGame/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
 .back {
   display: grid;
   position: fixed;
@@ -23,129 +25,125 @@
   transform: scale(1.2);
 }
 
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
-  background: #0a3c2f;
+  background: #6563ff;
 }
 
-.container {
-  position: relative;
+.wrapper {
+  height: 400px;
+  width: 400px;
+  padding: 25px;
+  background: #ebebeb;
+  border-radius: 10px;
+}
+
+.cards, .card, .view {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  gap: 30px;
-  background: #0d614b;
-  padding: 40px 60px;
+  justify-content: center;
 }
 
-h2 {
-  font-size: 3em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-
-.reset {
-  padding: 15px 20px;
-  color: #267c65;
-  background: #fff;
-  border:  none;
-  font-size: 1.5em;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-.reset:hover {
-  color:  #fff;
-  background: #134236;
-}
-
-.game {
-  width: 430px;
-  height: 430px;
-  display: flex;
+.cards {
+  height: 100%;
+  width: 100%;
   flex-wrap: wrap;
-  gap: 10px;
-  transform-style: preserve-3d;
-  perspective: 500px;
+  justify-content: space-between;
 }
 
-.item {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 3em;
-  background: #fff;
-  transform: rotateY(180deg);
-  transition: 0.25s;
+.cards .card {
   cursor: pointer;
+  position: relative;
+  perspective: 800px;
+  transform-style: preserve-3d;
+  height: calc(100% / 4 - 10px);
+  width: calc(100% / 4 - 10px);
 }
 
-.item.boxOpen {
-  transform: rotateY(0deg);
-  transform: scale(-1, 1);
+.card.shake {
+  animation: shake 0.35s ease-in-out;
 }
 
-.item::after {
-  content: '';
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(-13px);
+  }
+  40% {
+    transform: translateX(13px);
+  }
+  60% {
+    transform: translateX(-8px);
+  }
+  80% {
+    transform: translateX(8px);
+  }
+}
+
+.cards .card .view {
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  pointer-events: none;
   position: absolute;
-  inset: 0;
-  background: #209d7b;
-  transition: 0.25s;
-  transform: rotateY(0deg);
+  background: #fff;
+  border-radius: 7px;
   backface-visibility: hidden;
+  transition: transform 0.25s linear;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 }
 
-.boxOpen::after,
-.boxMatch::after {
+/* .card .front-view span {
+  color: #6563ff;
+  font-size: 40px;
+} */
+
+.card .back-view {
+  transform: rotateY(-180deg);
+}
+
+.card .back-view img {
+  max-width: 45px;
+}
+
+.card.flip .front-view{
   transform: rotateY(180deg);
 }
 
-.hidden {
-  visibility: hidden;
+.card.flip .back-view{
+  transform: rotateY(0);
 }
 
-.modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.oldV {
+  cursor: pointer;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background: #00000085;
-  z-index: 1;
+  bottom: 20px;
+  right: 20px;
+  width: 150px;
+  height: 100px;
+  filter:grayscale(100%);
+  opacity: 0.3;
+  background: url(./images/oldV.png);
+  background-size: cover;
+  border-radius: 5px;
+  transition: 0.5s;
 }
 
-.modalWindow {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 40px;
-  width: 500px;
-  height: 200px;
-  background: #267c65e6;
-}
-
-.win {
-  font-size: 3em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+.oldV:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  filter:grayscale(0);
+  opacity: 1;
 }
