--- a/collection/Shadow/style.css
+++ b/collection/Shadow/style.css
@@ -24,16 +24,25 @@ body {
   cursor: default;
 }
 
+#textM {
+  position: absolute;
+  color: #fff;
+  font-weight: 100;
+  font-size: 10em;
+  cursor: default;
+  z-index: 100;
+}
+
 #light {
   position: absolute;
   transform: translate(-50%, -50%);
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   background: #fff;
   border-radius: 50%;
   box-shadow: 0 0 15px #fff,
   0 0 50px #fff,
-  0 0 100px #fff,
-  0 0 200px #fff,
-  0 0 300px #fff;
+  0 0 150px #fff,
+  0 0 250px #fff,
+  0 0 350px #fff;
 }
