--- a/collection/Cards/CardsStyle/08/style.css
+++ b/collection/Cards/CardsStyle/08/style.css
@@ -53,3 +53,8 @@
   font-size: 4em;
   color: #fff;
 }
+
+.bodyEight .containerEight .glass:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
