--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ h1, h2 {
 
 .style {
   display: flex;
-  position: sticky;
+  position: relative;
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -82,7 +82,7 @@ h1, h2 {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: auto;
   gap: 50px;
   justify-content: center;
@@ -253,18 +253,37 @@ i.dark-theme-i {
   color: #000;
 }
 
+@media only screen and (max-width: 2560px) and (min-width: 1921px) {
+  .cards {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1920px) and (min-width: 1431px) {
+  .cards {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
 @media only screen and (max-width: 1430px) and (min-width: 1090px) {
   .cards {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-@media only screen and (max-width: 1089px) and (min-width: 745px) {
+@media only screen and (max-width: 1089px)  {
   .cards {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 @media only screen and (max-width: 744px) {
   .cards {
-    grid-template-columns: repeat(1, 1fr);
+    gap: 25px;
+  }
+  .container {
+    width: 210px;
+    height: 140px;
+  }
+  .text {
+    font-size: 1em;
   }
 }
