--- a/src/style.css
+++ b/src/style.css
@@ -13,16 +13,16 @@
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 2px;
+  border-radius: 5px;
   background: #4e4e4e;
 }
 
 ::-webkit-scrollbar-thumb:active {
-  border-radius: 2px;
+  border-radius: 5px;
   background: #727272;
 }
 
@@ -45,22 +45,28 @@ h1, h2 {
   margin: 50px 0 50px 0;
   font-size: 3rem;
   color:#333333;
-  text-shadow: 2px 2px 3px #585858;
+  /* text-shadow: 2px 2px 3px #585858; */
+}
+
+.style-pos {
+  display: absolute;
+  position: absolute;
+  width: 100%;
+  height: 65px;
+  margin: 0;
+  padding: 0;
 }
 
 .style {
-  display: flex;
-  position: relative;
+  display: block;
+  position: absolute;
   cursor: pointer;
   width: 50px;
   height: 50px;
   z-index: 10;
-  left: calc(100vw - 85px);
+  right: 40px;
   top: 20px;
-}
-
-.style {
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .active {
@@ -102,7 +108,7 @@ h1, h2 {
 
 .container:hover {
   transform: scale(1.1);
-  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5); */
 }
 
 .description {
@@ -209,8 +215,7 @@ footer a:hover .fa-square-github {
 
 footer a:hover .fa-square-instagram {
   background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-  -webkit-background-clip: text;
-          background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -227,9 +232,9 @@ footer a:hover .fa-square-instagram {
   color: #c9c9c9;
 }
 
-.container.dark-theme-container:hover {
+/* .container.dark-theme-container:hover {
   box-shadow: 0px 5px 20px 0px rgba(255, 255, 255, 0.5);
-}
+} */
 
 .container.dark-theme-container:hover .text {
   color: #fff;
@@ -237,7 +242,7 @@ footer a:hover .fa-square-instagram {
 
 .dark-theme-h1, .dark-theme-h2 {
   color: #cccccc;
-  text-shadow: 2px 2px 3px #a7a7a7;
+  /* text-shadow: 2px 2px 3px #a7a7a7; */
 }
 
 .dark-theme-line {
@@ -276,6 +281,11 @@ i.dark-theme-i {
   }
 }
 @media only screen and (max-width: 744px) {
+  .style {
+    width: 20px;
+    height: 20px;
+    scale: 0.8;
+  }
   .cards {
     gap: 25px;
   }
