--- a/src/style.css
+++ b/src/style.css
@@ -64,9 +64,9 @@ h1, h2 {
   width: 50px;
   height: 50px;
   z-index: 10;
-  right: 40px;
+  right: 30px;
   top: 20px;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 .active {
@@ -74,7 +74,7 @@ h1, h2 {
 }
 
 .style:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .main {
@@ -284,6 +284,8 @@ i.dark-theme-i {
   .style {
     width: 20px;
     height: 20px;
+    top: 10px;
+    right: 40px;
     scale: 0.8;
   }
   .cards {
